# SovereignStack

./: .env.example  .gitignore  ADOPTERS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFORMANCE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  OASA.md  README.md  REGISTRY.md  ROADMAP.md  SECURITY.md  docker-compose.yml  install.sh  pytest.ini  requirements-dev.txt  requirements-locked.txt  requirements.txt  sovereign-stack.yaml
.github/workflows/: oasa-conformance.yml  release.yml
charts/sovereignstack/: Chart.yaml  values.yaml
community/: cncf-sandbox-application.md
config/: autonomous-rules.yaml  otel-collector.yaml  prometheus-alerts.yml  prometheus.yml
config/keycloak/: sovereign-realm.json
config/spire/: agent.conf  server.conf
data_test/: merkle_tree.json
data_test/ingest/: 0048f54b-d7d7-4e3c-996e-21a19218af73.json  0079494d-941f-416f-bd8e-4e846fa973b0.json  00c7eca1-295f-428f-9426-c6a1e9753763.json  0584bf3d-60b8-4653-aac5-2d1c5fdcb1cc.json  0b156f47-172f-441e-9ea6-eca1edacd0bf.json  11bd4325-0a48-4fa2-8c08-94274c7df902.json  12f84537-cb4e-4f4e-8f9a-093f05948d8c.json  191760c0-384d-4e27-8f2b-fefa5b6dd0fa.json  1c0fbb8e-db39-4f14-bf45-40012f6f4aa4.json  1f266562-7a53-4a1e-b6aa-f759aa44197d.json  217f75bd-2a6f-4990-9345-b543f993828d.json  2cb61abf-7a53-4c31-9577-ef3bd4980e9b.json  3a536a60-d38b-4244-be4c-b09f09c44598.json  3b66526c-0dcf-46fc-b894-dd75f2d622a3.json  42fb7593-4597-49cd-ab17-51807161468f.json  4adbdb1c-ed93-4043-8502-6c73087e05d6.json  51227e14-a145-4653-88ba-d80e2fb9427a.json  533f1626-3019-4a45-8b00-56ed4889bce4.json  562d4236-5513-4202-86e1-7d218fd86d98.json  566d00ce-c0fa-4944-9c2e-7e9625dfc4b2.json  5b83f9c7-8e10-435a-89a2-de2c05d6eb64.json  5fcd43c1-b4cf-4cae-9491-7c68bacefbef.json  6139df72-087b-45d0-b31f-a69eb5c18d9f.json  65dc0971-3b55-453f-b6c8-a96a3f75656a.json  6670f157-65fd-4db2-af85-7fd701d17dbf.json  6b307334-464d-4d14-9013-58b20a099e22.json  6beb4e7f-16ff-47fa-a542-60e2a1f355df.json  6c4b39e0-e35a-4f23-9c75-6c294d9bce12.json  6e689a9c-d63c-4e70-82bc-938a2a2a5d7f.json  711e7e11-7e2a-4edb-9132-46801d39343f.json  80b36030-965e-4e34-9800-9b0fd62d60b0.json  8bdc46b5-e978-49e3-a7e5-0a62af2550e9.json  8d51f07c-4927-47d0-8c7f-8de28a81ce6a.json  8f1215dd-4508-4a99-909a-d2c577b8eef9.json  8f952882-0b3b-42ba-b73c-0a7b3669c625.json  93d8fab0-a47f-46df-96d8-3ba98e478526.json  (+22 more)
deploy/: README.md  docker-compose.prod.yml
docs/: ARCHITECTURE.md  architecture_guide.md
docs/api/: graphql.md
examples/: keycloak_setup.md  langchain_integration.py  openai_proxy_request.py  openai_proxy_request.sh  sample_compliance.json
k8s/: gateway-opa-sidecar.yaml  gvisor-runtime.yaml  network-policy.yaml  sovereign-configmap.yaml  sovereign-deployment.yaml  sovereign-network-policy.yaml  sovereign-node.yaml  sovereign-service.yaml
os/: README.md
playground/: README.md  docker-compose.yml
policies/: inference.rego
proto/: capability.proto  event.proto  identity.proto
reference/: .env.example  .gitignore  README.md  docker-compose.yml  sovereign-stack.yaml
reports/: l2-test.json  l2-test.md
rfcs/: 0000-rfc-process.md  0001-runtime-spec.md  0003-node-identity.md  0004-federation-protocol.md  0005-agent-api.md  0006-memory-spec.md  RFC-0001-universal-addressing.md  RFC-0030-agent-identity.md  RFC-0300-capability-protocol.md
schemas/: agent_schema.py  ingest-output.schema.json  marketplace-bundle.schema.json  oasa-compliance.schema.json  oasa-lock.md  oasa-node-manifest.schema.json  oasa-request.schema.json  sovereign-stack.schema.json
scripts/: register-spire-entries.sh
services/: agent_service.py  autonomous_controller.py  certification_service.py  compute_service.py  crdt.py  enclave_attestation.py  enterprise_service.py  event_log.py  federation_service.py  gateway_service.py  graphql_schema.py  ingest_service.py  kv_cache_service.py  marketplace_service.py  memory_service.py  merkle_audit.py  predictive_scheduler.py  spiffe_auth.py  spiffe_helper.py  sync_engine.py  weight_federation_service.py
specs/: README.md
ss-capability/: Cargo.toml
ss-capability/src/: descriptor.rs  lib.rs  query.rs  registry.rs
ss-cas/: Cargo.toml
ss-cas/src/: lib.rs  node.rs  store.rs
ss-cli/: Cargo.toml
ss-cli/src/: main.rs
ss-contract/: README.md
ss-core/: Cargo.toml
ss-core/src/: error.rs  lib.rs  timestamp.rs  types.rs  uri.rs
ss-crypto/: Cargo.toml
ss-crypto/src/: hash.rs  keys.rs  lib.rs  signature.rs
ss-device/: README.md
ss-discovery/: README.md
ss-economy/: README.md
ss-eventbus/: Cargo.toml
ss-eventbus/src/: event.rs  lib.rs  stream.rs
ss-federation/: Cargo.toml
ss-federation/src/: lib.rs  network.rs  node.rs  policy.rs  rpc.rs
ss-identity/: Cargo.toml
ss-identity/src/: identity.rs  lib.rs  registry.rs  trust.rs
ss-jurisdiction/: README.md
ss-kas/: README.md
ss-learning/: README.md
ss-memory/: README.md
ss-metering/: README.md
ss-os/: README.md
ss-policy/: README.md
ss-provenance/: README.md
ss-reason/: README.md
ss-registry/: README.md
ss-reputation/: README.md
ss-routing/: README.md
ss-runtime/: Cargo.toml
ss-runtime/src/: engine.rs  lib.rs  router.rs
ss-scheduler/: README.md
ss-search/: README.md
ss-sessiond/: Cargo.toml
ss-sessiond/src/: daemon.rs  lib.rs  session.rs
ss-sig/: README.md
ss-sip/: README.md
ss-swarm/: README.md
ss-trust/: README.md
ss-twin/: Cargo.toml
ss-twin/src/: interface.rs  lib.rs  session.rs
ss-workflow/: README.md
tests/: test_agent_ecosystem.py  test_autonomous_controller.py  test_certification_service.py  test_crdt.py  test_enclave_attestation.py  test_enterprise_service.py  test_gateway.py  test_graphql.py  test_merkle_audit.py  test_spiffe_auth.py  test_sync_engine.py  test_tools.py  test_weight_federation.py
tools/: audit_deployment.py  benchmark.py  federate_weights.py  generate_compliance_report.py  issue_certification.py  oasa_validator.py  requirements.txt  runtime_shield.py  sovereign_stack.py  validate_compliance.py  verify_audit.py  verify_certification.py  vram_calculator.py
(+72 files in other folders)
