[package]
name = "ss-cas"
description = "SovereignStack Content-Addressed Storage — Merkle memory trees for immutable, reproducible state"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ss-core = { workspace = true }
ss-crypto = { path = "../ss-crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
