[package]
name = "ss-crypto"
description = "SovereignStack cryptographic primitives — Ed25519 signing, verification, and content hashing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ss-core = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
