[package]
name = "ss-eventbus"
description = "SovereignStack Event Bus — event sourcing infrastructure for all state changes"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ss-core = { workspace = true }
ss-crypto = { path = "../ss-crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
