[package]
name = "ss-identity"
description = "SovereignStack Universal Agent Identity — persistent identities with cryptographic keys for all network participants"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ss-core = { workspace = true }
ss-crypto = { path = "../ss-crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
