[package]
name = "ss-runtime"
description = "SovereignStack Multi-Model Runtime — abstraction layer for local and cloud LLM execution"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ss-core = { workspace = true }
ss-capability = { path = "../ss-capability" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
tracing = { workspace = true }
